# discord-coinbot

./: .gitignore  .google-cookie  .replit  README.md  pyproject.toml  requirements.txt  setup.bat  start.bat  test.py
config/: config.yml  daily.yml
data/: actions.pickle  coins.pickle  coins.txt  dailycoins.txt
docs/: apis.md  setup.md  thanks.md
src/: bbb.py  bot.py  github.py  mainbot.py  padlet.py  xmltodict.py
